--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,11 @@ repositories {
     mavenCentral()
 }
 
+
+def scalaVersion = "2.12"
+
 dependencies {
-    compile 'com.typesafe.akka:akka-http_2.12:10.0.9'
-    compile 'com.lightbend.akka:akka-stream-alpakka-file_2.12:0.11'
-    compile 'com.lightbend.akka:akka-stream-alpakka-csv_2.12:0.11'
+    compile "com.typesafe.akka:akka-http_$scalaVersion:10.0.9"
+    compile "com.lightbend.akka:akka-stream-alpakka-file_$scalaVersion:0.11"
+    compile "com.lightbend.akka:akka-stream-alpakka-csv_$scalaVersion:0.11"
 }
