Configurable data directory poll interval

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,6 +5,7 @@ server {
 
 csv-processor {
   data-dir: data
+  data-dir-poll-interval: 100 millis
   average-threshold: 0.9
   email-threshold: 5
 }
