Replaced ":" with "=" in config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,13 +1,13 @@
 server {
-  host: localhost
-  port: 8080
+  host = localhost
+  port = 8080
 }
 
 csv-processor {
-  data-dir: data
-  data-dir-poll-interval: 100 millis
-  average-threshold: 0.9
-  email-threshold: 5
+  data-dir = data
+  data-dir-poll-interval = 100 millis
+  average-threshold = 0.9
+  email-threshold = 5
 }
 
 akka.http.server.idle-timeout = 5 minutes
